<resources>
    <string name="app_name">AndroidTask</string>
    <!-- Strings related to login -->
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="network_failure">Network Failure</string>
    <string name="conversion_error">Conversion Error</string>
    <string name="Add">Add</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="price">price</string>
    <string name="quantity">quantity</string>
    <string name="name">name</string>
    <string name="search">search</string>
</resources>